fixes layout jumps when selecting a date in callendar

--- a/src/index.css
+++ b/src/index.css
@@ -69,8 +69,7 @@ body {
 /* ------------------- */
 @layer components {
   .react-calendar {
-    @apply bg-white rounded-lg border border-lavander-100 w-full p-6;
-    
+    @apply bg-white rounded-lg border border-lavander-100 p-6;
   }
 
   .react-calendar__navigation {
